samples/glossentry/valid/R9.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
  <glossBody>
    <glossSurfaceForm>Surface</glossSurfaceForm>
    <glossAlt><glossAcronym>ACR</glossAcronym></glossAlt>
  </glossBody>
</glossentry>