samples/glossentry/invalid/R10.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
  <glossBody>
    <glossStatus/>
  </glossBody>
</glossentry>